--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -2,22 +2,22 @@
                 <div class="sidebar">
                     <div class="row affiliate-widget">
                         <div class="col-md-12 col-sm-6">
-                            <a href="#">
-                                <img class="img-responsive" src="/images/300x250.png" alt="">
+                            <a href="javascript:void(0)">
+                                <img class="img-responsive" src="/images/unique_hotel.jpg" alt="">
                             </a>
                         </div>
                     </div>
                     <div class="row affiliate-widget">
                         <div class="col-md-12 col-sm-6">
                             <a href="#">
-                                <img class="img-responsive" src="/images/300x250.png" alt="">
+                                <img class="img-responsive" src="/images/hyatt_regency.jpg" alt="">
                             </a>
                         </div>
                     </div>
                     <div class="row affiliate-widget">
                         <div class="col-md-12 col-sm-6">
                             <a href="#">
-                                <img class="img-responsive" src="/images/300x250.png" alt="">
+                                <img class="img-responsive" src="/images/tanah_lot_bali.jpg" alt="">
                             </a>
                         </div>
                     </div>
