Update sidebar ad image

--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -2,22 +2,22 @@
                 <div class="sidebar">
                     <div class="row affiliate-widget">
                         <div class="col-md-12 col-sm-6">
-                            <a href="javascript:void(0)">
-                                <img class="img-responsive" src="/images/unique_hotel.jpg" alt="">
+                            <a href="http://www.traveloka.com/?utm_source=tripkoo&utm_medium=banner&utm_term=paket%20wisata&utm_content=300x250&utm_campaign=banner" rel="nofollow" target="_blank">
+                                <img class="img-responsive" src="/images/iklan-traveloka.jpg" alt="">
                             </a>
                         </div>
                     </div>
                     <div class="row affiliate-widget">
                         <div class="col-md-12 col-sm-6">
-                            <a href="#">
-                                <img class="img-responsive" src="/images/hyatt_regency.jpg" alt="">
+                            <a href="http://www.trivago.co.id/?utm_source=tripkoo&utm_medium=banner&utm_term=paket%20wisata&utm_content=300x250&utm_campaign=banner" rel="nofollow" target="_blank">
+                                <img class="img-responsive" src="/images/trivagohotel.jpg" alt="">
                             </a>
                         </div>
                     </div>
                     <div class="row affiliate-widget">
                         <div class="col-md-12 col-sm-6">
-                            <a href="#">
-                                <img class="img-responsive" src="/images/tanah_lot_bali.jpg" alt="">
+                            <a href="http://www.wego.co.id/?utm_source=tripkoo&utm_medium=banner&utm_term=paket%20wisata&utm_content=300x250&utm_campaign=banner" rel="nofollow" target="_blank">
+                                <img class="img-responsive" src="/images/bali.jpg" alt="">
                             </a>
                         </div>
                     </div>
