--- a/views/web_pages/index.ejs
+++ b/views/web_pages/index.ejs
@@ -39,10 +39,10 @@
                             <img class="img-responsive" src="<%= web_pages.documents[i].image; %>" alt="" onerror='this.src="/images/300x250.png";'>
                         </div>
                         <div class="col-sm-9">
-                            <h3 class="list-title"><a href="<%= web_pages.documents[i].url; %>" target="_blank"><%= web_pages.documents[i].title; %></a></h3>
+                            <h3 class="list-title"><a href="<%= web_pages.documents[i].url; %>" target="_blank" rel="nofollow" target="_blank"><%= web_pages.documents[i].title; %></a></h3>
                             <h4 class="list-sub-title"><%= web_pages.documents[i].price; %></h4>
                             <p><%= web_pages.documents[i].description; %></p>
-                            <a class="btn btn-primary" href="<%= web_pages.documents[i].url; %>" target="_blank">Buka Situs</a>
+                            <a class="btn btn-primary" href="<%= web_pages.documents[i].url; %>" rel="nofollow" target="_blank">Buka Situs</a>
                         </div>
                     </div>
                 </div>
