--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,7 +47,7 @@ Note: Please use our back link in your site (webthemez.com)
 				</div>
 				<center>
 					<a href="#subscribe" id="sync" class="scroll button learn-more orange-btn">Cari</a> atau 
-					<a href="/search" class="button learn-more orange-btn">Telusuri Paket Wisata</a>
+					<a href="/search" class="button learn-more orange-btn">Telusuri</a>
 				</center>
 			</div>
 		</div>
@@ -87,7 +87,7 @@ $(function(){
 	<script type="text/javascript" src="/javascripts/Backstretch.js"></script>
 	<script type="text/javascript" src="/javascripts/jquery.js"></script>
 	<script type="text/javascript" src="/javascripts/global.js"></script>
-	<footer class="blacken">Created by <a href="/" target="_blank">TripKOO</a></footer>
+	<footer class="blacken">Created by <a href="/" target="_blank">TripKOO</a> Background by <a href="http://www.landscapehdwalls.com" target="_blank" rel="nofollow">landscapehdwalls</a></footer>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
