Change subtitle xplooor on homepage

--- a/public/stylesheets/home_styles.css
+++ b/public/stylesheets/home_styles.css
@@ -408,3 +408,4 @@ textarea.synched-sub {
 	textarea.synched-sub {width:100%;}
 	.message {width:80%;}
 }
+.intro span {font-family: "Lobster Two",cursive}
