--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,7 @@ Note: Please use our back link in your site (webthemez.com)
 		<div class="main-container">
 			<div class="wrapper">
 				<h1><%= site.title; %></h1>	
-				<h2 class="intro"><%= site.description; %></h2>
+				<h2 class="intro">Selamat datang di <span>XplOOor</span>. <%= site.description; %></h2>
 				<div id="socialIcons">
 					<ul> 
 						<li><a href="https://twitter.com/home?status=<%= site.description; %> <%= site.url; %>" title="Twitter" class="twitterIcon" target="_blank"></a></li>
