Update social media og:image

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@ Note: Please use our back link in your site (webthemez.com)
 <meta property="og:url" content="<%= site.url; %>">
 <meta property="og:title" content="<%= site.slogan; %> | <%= site.title; %>">
 <meta property="og:description" content="<%= site.description; %>">
-<meta property="og:image" content="<%= site.url; %>/images/hotel.jpg">
+<meta property="og:image" content="<%= site.url; %>/images/xplooor_socmed_image.jpg">
 
 <link rel="stylesheet" type="text/css" href="/stylesheets/css.css"> 
 <!-- <link href="http://subditor.herokuapp.com/favicon.ico" type="image/x-icon" rel="icon">
