--- a/views/web_pages/index.ejs
+++ b/views/web_pages/index.ejs
@@ -39,7 +39,7 @@
                             <img class="img-responsive" src="<%= site.static_host %>/images/<%= web_pages.documents[i]._id; %>.jpg" alt="<%= web_pages.documents[i].title; %>" onerror='this.src="/search/img?id=<%= web_pages.documents[i]._id %>&src=<%= web_pages.documents[i].image %>";' data-id="<%= web_pages.documents[i]._id; %>" data-img-original="<%= site.static_host %>/images/<%= web_pages.documents[i]._id; %>.jpg">
                         </div>
                         <div class="col-sm-9">
-                            <h3 class="list-title"><a href="<%= web_pages.documents[i].url; %>" target="_blank" rel="nofollow" target="_blank"><%= web_pages.documents[i].title; %></a></h3>
+                            <h3 class="list-title"><%= web_pages.documents[i].title; %></h3>
                             <h4 class="list-sub-title"><%= web_pages.documents[i].price; %></h4>
                             <p><%= web_pages.documents[i].description; %></p>
                             <a class="btn btn-primary" href="<%= web_pages.documents[i].url; %>" rel="nofollow" target="_blank">Buka Situs</a>
