Add google analytic

--- a/views/partials/layout_header.ejs
+++ b/views/partials/layout_header.ejs
@@ -14,6 +14,7 @@
         <meta name="canonical" href="<%= canonical %>">
     <% } %>
 
+<meta name="google-site-verification" content="n4fm6V7dOSJG2k3nRqTxFAVZLyVbT0zLAY3DqQzSBfc" />	
     <!-- Bootstrap Core CSS -->
     <link rel='stylesheet' href='/stylesheets/bootstrap.min.css' />
     <link rel='stylesheet' href='/stylesheets/flat-ui.min.css' />
