--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,6 +15,7 @@ Note: Please use our back link in your site (webthemez.com)
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
 <title><%= site.slogan; %> | <%= site.title; %></title>
+<meta name="google-site-verification" content="n4fm6V7dOSJG2k3nRqTxFAVZLyVbT0zLAY3DqQzSBfc" />
 <meta name="description" content="<%= site.description; %>">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
@@ -94,7 +95,7 @@ $(function(){
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-59982081-1', 'auto');
+  ga('create', 'UA-71162640-1', 'auto');
   ga('send', 'pageview');
 
 </script>
