--- a/public/stylesheets/1-col-portfolio.css
+++ b/public/stylesheets/1-col-portfolio.css
@@ -3,8 +3,8 @@
  * Code licensed under the Apache License v2.0.
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,800,600);
-@import url(http://fonts.googleapis.com/css?family=Lobster+Two:700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,800,600);
+@import url(https://fonts.googleapis.com/css?family=Lobster+Two:700);
 body {
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
