--- a/public/stylesheets/home_styles.css
+++ b/public/stylesheets/home_styles.css
@@ -183,8 +183,10 @@ display: block;
 clear: both;
 }
 .blacken {
-    background-color: #000000;
-    opacity: 0.7;	
+/*    background-color: #000000;
+    opacity: 0.7;	*/
+	background:rgb(0,0,0);
+    background:rgba(0,0,0,0.7);
 }
 #subscribe p{
 text-align:center;
@@ -407,5 +409,27 @@ textarea.synched-sub {
 	.subtitle-container {width: 90%;}
 	textarea.synched-sub {width:100%;}
 	.message {width:80%;}
+
+	.main-container {
+	    transform: none;
+	    top: 10px;
+	}
+	.blacken {height:auto !important;}
 }
 .intro span {font-family: "Lobster Two",cursive}
+.popular-row {margin:25px 0px;}
+.popular-label h3 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+    color: white;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+/*.popular-container {margin-bottom:20px;}*/
+.clear {clear:both;}
+.site-desc {margin:35px auto !important}
+.popular-item {
+    margin-bottom: 25px;
+}
