--- a/public/stylesheets/home_styles.css
+++ b/public/stylesheets/home_styles.css
@@ -418,15 +418,18 @@ textarea.synched-sub {
 }
 .intro span {font-family: "Lobster Two",cursive}
 .popular-row {margin:25px 0px;}
+.popular-label {}
 .popular-label h3 {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   -moz-transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
     color: white;
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
+.popular-label img {width: 100%;}
 /*.popular-container {margin-bottom:20px;}*/
 .clear {clear:both;}
 .site-desc {margin:35px auto !important}
