--- a/views/index.ejs
+++ b/views/index.ejs
@@ -54,19 +54,19 @@ Note: Please use our back link in your site (webthemez.com)
 				<div class="col-sm-12"><h2 class="intro tempBy text-center">Pencarian Populer</h2></div>
 			</div>
 			<div class="row popular-row">
-				<div class="col-md-4 popular-item">
+				<div class="col-md-4 col-sm-4 popular-item">
 					<a href="/paket-wisata/tidung" class="popular-label">
 						<img class="img-responsive" src="/images/popular/jembatan-cinta-pulau-tidung.jpg" />
 						<h3 class="intro">Pulau Tidung</h3>
 					</a>
 				</div>
-				<div class="col-md-4 popular-item">
+				<div class="col-md-4 col-sm-4 popular-item">
 					<a href="/paket-wisata/lombok" class="popular-label">
 						<img class="img-responsive" src="/images/popular/lombok.jpg" />
 						<h3 class="intro">Lombok</h3>
 					</a>
 				</div>
-				<div class="col-md-4 popular-item">
+				<div class="col-md-4 col-sm-4 popular-item">
 					<a href="/paket-wisata/bromo" class="popular-label">
 						<img class="img-responsive" src="/images/popular/bromo.jpg" />
 						<h3 class="intro">Gunung Bromo</h3>
