--- a/public/stylesheets/home_styles.css
+++ b/public/stylesheets/home_styles.css
@@ -22,7 +22,7 @@ body {
 	filter: dropshadow(color=#000000, offx=0, offy=1);	
 }
 h1 {
-	font-size:68px;
+	font-size:600%;
 	letter-spacing:-2px;  
 	text-align:center; 
 	/*padding-top:30px;*/
@@ -370,7 +370,7 @@ textarea.synched-sub {
 	textarea.synched-sub {width:100%;}
 	.message {width:80%;}
 }
-@media(max-width:420px){
+@media screen and (max-width:420px){
 	h1{
 	float:initial;
 	text-align: center;
@@ -410,11 +410,13 @@ textarea.synched-sub {
 	textarea.synched-sub {width:100%;}
 	.message {width:80%;}
 
-	.main-container {
+/*	.main-container {
 	    transform: none;
 	    top: 10px;
-	}
+	}*/
 	.blacken {height:auto !important;}
+
+
 }
 .intro span {font-family: "Lobster Two",cursive}
 .popular-row {margin:25px 0px;}
