--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,6 +15,7 @@ Note: Please use our back link in your site (webthemez.com)
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
 <title><%= site.slogan; %> | <%= site.title; %></title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="google-site-verification" content="n4fm6V7dOSJG2k3nRqTxFAVZLyVbT0zLAY3DqQzSBfc" />
 <meta name="description" content="<%= site.description; %>">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
@@ -49,7 +50,7 @@ Note: Please use our back link in your site (webthemez.com)
 		</div>
 	</div>
 	<div id="subscribe" class="relative wide-screen blacken">
-		<div class="container popular-container main-container">
+		<div class="container popular-container">
 			<div class="row">
 				<div class="col-sm-12"><h2 class="intro tempBy text-center">Pencarian Populer</h2></div>
 			</div>
@@ -73,6 +74,27 @@ Note: Please use our back link in your site (webthemez.com)
 					</a>
 				</div>
 			</div>
+			<div class="row popular-row">
+				<div class="col-md-4 col-sm-4 popular-item">
+					<a href="/paket-wisata/china" class="popular-label">
+						<img class="img-responsive" src="/images/popular/china.jpg" />
+						<h3 class="intro">China</h3>
+					</a>
+				</div>
+				<div class="col-md-4 col-sm-4 popular-item">
+					<a href="/paket-wisata/korea" class="popular-label">
+						<img class="img-responsive" src="/images/popular/everland-tour-korea.jpg" />
+						<h3 class="intro">Korea Selatan</h3>
+					</a>
+				</div>
+				<div class="col-md-4 col-sm-4 popular-item">
+					<a href="/paket-wisata/hongkong" class="popular-label">
+						<img class="img-responsive" src="/images/popular/hongkong.jpg" />
+						<h3 class="intro">Hongkong</h3>
+					</a>
+				</div>
+			</div>
+
 		</div>
 
 <script>
