DESIGN: Fix footer positioning

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,7 +49,7 @@ Note: Please use our back link in your site (webthemez.com)
 			</div>
 		</div>
 	</div>
-	<div id="subscribe" class="relative wide-screen blacken">
+	<div id="subscribe" class="relative blacken">
 		<div class="container popular-container">
 			<div class="row">
 				<div class="col-sm-12"><h2 class="intro tempBy text-center">Pencarian Populer</h2></div>
@@ -94,24 +94,9 @@ Note: Please use our back link in your site (webthemez.com)
 					</a>
 				</div>
 			</div>
-
 		</div>
-
-<script>
-$(function(){
-	var wrapper = $('<div/>').css({height:0,width:0,'overflow':'hidden'});
-	var fileInput = $(':file').wrap(wrapper);
-
-	fileInput.change(function(){
-	    $this = $(this);
-	    $('#file').text($this.val());
-	})
-
-	$('#file').click(function(){
-	    fileInput.click();
-	}).show();
-});
-</script>	</div>
+		<div style="clear:both"></div>
+	</div>
 <!--
 <div id="overlay"></div>
 -->
