--- a/views/partials/layout_header.ejs
+++ b/views/partials/layout_header.ejs
@@ -9,7 +9,7 @@
     <meta name="description" content="Cari paket wisata <%= q %> dan paket wisata lainnya">
     <meta name="author" content="">
 
-    <title>Cari Paket Wisata <%= (q&&q || '' ); %> | <%= site.title; %></title>
+    <title>Cari Paket Wisata <%= (q&&q.charAt(0).toUpperCase() + q.slice(1) || '' ); %> | <%= site.title; %></title>
     <% if(canonical) { %>
         <meta name="canonical" href="<%= canonical %>">
     <% } %>
