--- a/views/partials/layout_header.ejs
+++ b/views/partials/layout_header.ejs
@@ -6,10 +6,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Cari paket wisata <%= q %> dan paket wisata lainnya">
+    <meta name="description" content="Mau jalan jalan, dapatkan penawaran harga terbaik paket wisata<%= (q&&' '+q || '' ); %> untuk tour travel liburan murah meriah hanya di XplooOr.com">
     <meta name="author" content="">
 
-    <title>Cari Paket Wisata <%= (q&&q || '' ); %> | <%= site.title; %></title>
+    <title>Harga Paket Wisata<%= (q&&' '+q || '' ); %> | <%= site.title; %></title>
     <% if(canonical) { %>
         <meta name="canonical" href="<%= canonical %>">
     <% } %>
