DESIGN: Change static host url

--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -3,21 +3,21 @@
                     <div class="row affiliate-widget">
                         <div class="col-md-12">
                             <a href="http://www.traveloka.com/?utm_source=tripkoo&utm_medium=banner&utm_term=paket%20wisata&utm_content=300x250&utm_campaign=banner" rel="nofollow" target="_blank">
-                                <img class="img-responsive" src="/images/iklan-traveloka.jpg" alt="">
+                                <img class="img-responsive" src="<%= site.static_host %>/images/iklan-traveloka.jpg" alt="">
                             </a>
                         </div>
                     </div>
                     <div class="row affiliate-widget">
                         <div class="col-md-12">
                             <a href="http://www.trivago.co.id/?utm_source=tripkoo&utm_medium=banner&utm_term=paket%20wisata&utm_content=300x250&utm_campaign=banner" rel="nofollow" target="_blank">
-                                <img class="img-responsive" src="/images/trivagohotel.jpg" alt="">
+                                <img class="img-responsive" src="<%= site.static_host %>/images/trivagohotel.jpg" alt="">
                             </a>
                         </div>
                     </div>
                     <div class="row affiliate-widget">
                         <div class="col-md-12">
                             <a href="http://www.wego.co.id/?utm_source=tripkoo&utm_medium=banner&utm_term=paket%20wisata&utm_content=300x250&utm_campaign=banner" rel="nofollow" target="_blank">
-                                <img class="img-responsive" src="/images/bali.jpg" alt="">
+                                <img class="img-responsive" src="<%= site.static_host %>/images/bali.jpg" alt="">
                             </a>
                         </div>
                     </div>
