--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,13 +25,13 @@ Note: Please use our back link in your site (webthemez.com)
 <meta property="og:description" content="<%= site.description; %>">
 <meta property="og:image" content="<%= site.url; %>/images/xplooor_socmed_image.jpg">
 
-<link rel="stylesheet" type="text/css" href="/stylesheets/css.css"> 
-<link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.min.css"> 
+<link rel="stylesheet" type="text/css" href="<%= site.static_host %>/stylesheets/css.css"> 
+<link rel="stylesheet" type="text/css" href="<%= site.static_host %>/stylesheets/bootstrap.min.css"> 
 <!-- <link href="http://subditor.herokuapp.com/favicon.ico" type="image/x-icon" rel="icon">
 <link href="http://subditor.herokuapp.com/favicon.ico" type="image/x-icon" rel="shortcut icon"> -->
-<link rel="stylesheet" type="text/css" href="/stylesheets/home_styles.css">
-<script src="/javascripts/analytics.js" async=""></script>
-<script type="text/javascript" src="/javascripts/jquery-1.js"></script>
+<link rel="stylesheet" type="text/css" href="<%= site.static_host %>/stylesheets/home_styles.css">
+<script src="<%= site.static_host %>/javascripts/analytics.js" async=""></script>
+<script type="text/javascript" src="<%= site.static_host %>/javascripts/jquery-1.js"></script>
 </head>
 
 <body id="home">
@@ -57,19 +57,19 @@ Note: Please use our back link in your site (webthemez.com)
 			<div class="row popular-row">
 				<div class="col-md-4 col-sm-4 popular-item">
 					<a href="/paket-wisata/tidung" class="popular-label">
-						<img class="img-responsive" src="/images/popular/jembatan-cinta-pulau-tidung.jpg" />
+						<img class="img-responsive" src="<%= site.static_host %>/images/popular/jembatan-cinta-pulau-tidung.jpg" />
 						<h3 class="intro">Pulau Tidung</h3>
 					</a>
 				</div>
 				<div class="col-md-4 col-sm-4 popular-item">
 					<a href="/paket-wisata/lombok" class="popular-label">
-						<img class="img-responsive" src="/images/popular/lombok.jpg" />
+						<img class="img-responsive" src="<%= site.static_host %>/images/popular/lombok.jpg" />
 						<h3 class="intro">Lombok</h3>
 					</a>
 				</div>
 				<div class="col-md-4 col-sm-4 popular-item">
 					<a href="/paket-wisata/bromo" class="popular-label">
-						<img class="img-responsive" src="/images/popular/bromo.jpg" />
+						<img class="img-responsive" src="<%= site.static_host %>/images/popular/bromo.jpg" />
 						<h3 class="intro">Gunung Bromo</h3>
 					</a>
 				</div>
@@ -77,19 +77,19 @@ Note: Please use our back link in your site (webthemez.com)
 			<div class="row popular-row">
 				<div class="col-md-4 col-sm-4 popular-item">
 					<a href="/paket-wisata/china" class="popular-label">
-						<img class="img-responsive" src="/images/popular/china.jpg" />
+						<img class="img-responsive" src="<%= site.static_host %>/images/popular/china.jpg" />
 						<h3 class="intro">China</h3>
 					</a>
 				</div>
 				<div class="col-md-4 col-sm-4 popular-item">
 					<a href="/paket-wisata/korea" class="popular-label">
-						<img class="img-responsive" src="/images/popular/everland-tour-korea.jpg" />
+						<img class="img-responsive" src="<%= site.static_host %>/images/popular/everland-tour-korea.jpg" />
 						<h3 class="intro">Korea Selatan</h3>
 					</a>
 				</div>
 				<div class="col-md-4 col-sm-4 popular-item">
 					<a href="/paket-wisata/hongkong" class="popular-label">
-						<img class="img-responsive" src="/images/popular/hongkong.jpg" />
+						<img class="img-responsive" src="<%= site.static_host %>/images/popular/hongkong.jpg" />
 						<h3 class="intro">Hongkong</h3>
 					</a>
 				</div>
@@ -101,9 +101,9 @@ Note: Please use our back link in your site (webthemez.com)
 <div id="overlay"></div>
 -->
 	<!--Scripts-->
-	<script type="text/javascript" src="/javascripts/Backstretch.js"></script>
-	<script type="text/javascript" src="/javascripts/jquery.js"></script>
-	<script type="text/javascript" src="/javascripts/global.js"></script>
+	<script type="text/javascript" src="<%= site.static_host %>/javascripts/Backstretch.js"></script>
+	<script type="text/javascript" src="<%= site.static_host %>/javascripts/jquery.js"></script>
+	<script type="text/javascript" src="<%= site.static_host %>/javascripts/global.js"></script>
 	<footer class="blacken">Created by <a href="/" target="_blank"><%= site.title; %></a> Background by <a href="http://www.landscapehdwalls.com" target="_blank" rel="nofollow">landscapehdwalls</a></footer>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
