--- a/views/partials/layout_header.ejs
+++ b/views/partials/layout_header.ejs
@@ -9,16 +9,16 @@
     <meta name="description" content="Mau jalan jalan, dapatkan penawaran harga terbaik paket wisata<%= (q&&' '+q || '' ); %> untuk tour travel liburan murah meriah hanya di XplooOr.com">
     <meta name="author" content="">
 
-   <title>Cari Paket Wisata <%= (q&&q.charAt(0).toUpperCase() + q.slice(1) || '' ); %> | <%= site.title; %></title>
+   <title>Harga Paket Wisata <%= (q&&q.charAt(0).toUpperCase() + q.slice(1) || '' ); %> | <%= site.title; %></title>
     <% if(canonical) { %>
         <meta name="canonical" href="<%= canonical %>">
     <% } %>
 
 <meta name="google-site-verification" content="n4fm6V7dOSJG2k3nRqTxFAVZLyVbT0zLAY3DqQzSBfc" />	
     <!-- Bootstrap Core CSS -->
-    <link rel='stylesheet' href='/stylesheets/bootstrap.min.css' />
-    <link rel='stylesheet' href='/stylesheets/flat-ui.min.css' />
-    <link rel='stylesheet' href='/stylesheets/1-col-portfolio.css' />
+    <link rel='stylesheet' href='<%= site.static_host %>/stylesheets/bootstrap.min.css' />
+    <link rel='stylesheet' href='<%= site.static_host %>/stylesheets/flat-ui.min.css' />
+    <link rel='stylesheet' href='<%= site.static_host %>/stylesheets/1-col-portfolio.css' />
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
