--- a/views/web_pages/index.ejs
+++ b/views/web_pages/index.ejs
@@ -36,7 +36,7 @@
                 <div class="list">
                     <div class="row">
                         <div class="col-sm-3">
-                            <img class="img-responsive" src="<%= site.static_host %>/images/<%= web_pages.documents[i]._id; %>.jpg" alt="<%= web_pages.documents[i].title; %>" onerror='this.src="/search/img?id=<%= web_pages.documents[i]._id %>&src=<%= web_pages.documents[i].image %>";' data-id="<%= web_pages.documents[i]._id; %>" data-img-original="<%= site.static_host %>/images/<%= web_pages.documents[i]._id; %>.jpg">
+                            <img class="img-responsive" src="<%= site.static_host %>/images/images/<%= web_pages.documents[i]._id; %>.jpg" alt="<%= web_pages.documents[i].title; %>" onerror='this.src="/search/img?id=<%= web_pages.documents[i]._id %>&src=<%= web_pages.documents[i].image %>";' data-id="<%= web_pages.documents[i]._id; %>" data-img-original="<%= site.static_host %>/images/<%= web_pages.documents[i]._id; %>.jpg">
                         </div>
                         <div class="col-sm-9">
                             <h3 class="list-title"><%= web_pages.documents[i].title; %></h3>
