FEATURE: Add Pencarian Populer

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,6 +56,26 @@ Note: Please use our back link in your site (webthemez.com)
 			</div>
 			<div class="row popular-row">
 				<div class="col-md-4 col-sm-4 popular-item">
+					<a href="/paket-wisata/bali" class="popular-label">
+						<img class="img-responsive" src="<%= site.static_host %>/images/popular/bali.jpg" />
+						<h3 class="intro">Bali</h3>
+					</a>
+				</div>
+				<div class="col-md-4 col-sm-4 popular-item">
+					<a href="/paket-wisata/komodo" class="popular-label">
+						<img class="img-responsive" src="<%= site.static_host %>/images/popular/komodo.jpg" />
+						<h3 class="intro">Pulau Komodo</h3>
+					</a>
+				</div>
+				<div class="col-md-4 col-sm-4 popular-item">
+					<a href="/paket-wisata/raja-ampat" class="popular-label">
+						<img class="img-responsive" src="<%= site.static_host %>/images/popular/raja-ampat.jpg" />
+						<h3 class="intro">Raja Ampat</h3>
+					</a>
+				</div>
+			</div>
+			<div class="row popular-row">
+				<div class="col-md-4 col-sm-4 popular-item">
 					<a href="/paket-wisata/tidung" class="popular-label">
 						<img class="img-responsive" src="<%= site.static_host %>/images/popular/jembatan-cinta-pulau-tidung.jpg" />
 						<h3 class="intro">Pulau Tidung</h3>
