--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,7 +52,7 @@ Note: Please use our back link in your site (webthemez.com)
 	<div id="subscribe" class="relative blacken">
 		<div class="container popular-container">
 			<div class="row">
-				<div class="col-sm-12"><h2 class="intro tempBy text-center">Pencarian Populer</h2></div>
+				<div class="col-sm-12"><h2 class="intro tempBy text-center">Tempat Wisata Favorit</h2></div>
 			</div>
 			<div class="row popular-row">
 				<div class="col-md-4 col-sm-4 popular-item">
