--- a/public/stylesheets/1-col-portfolio.css
+++ b/public/stylesheets/1-col-portfolio.css
@@ -6,7 +6,7 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,800,600);
 @import url(https://fonts.googleapis.com/css?family=Lobster+Two:700);
 body {
-    padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+    /*padding-top: 70px; *//* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
 
 footer {
@@ -30,3 +30,6 @@ p {font-size:100%;}
 	.list-title {margin-top: 20px;line-height: 30px;}
 	.sidebar {float:none;margin: 0 auto;}
 }
+
+.navbar {margin-bottom:0 !important;}
+.breadcrumb {border-radius:0 !important;}
