--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,7 +43,7 @@ Note: Please use our back link in your site (webthemez.com)
 				<h1><%= site.title; %></h1>	
 				<h2 class="intro site-desc">Selamat datang di <span>XplOOor</span>. <%= site.description; %></h2>
 				<center>
-					<a href="/search" class="button learn-more orange-btn">Cari</a> atau 
+					<a href="/paket-wisata" class="button learn-more orange-btn">Cari</a> atau 
 					<a href="#subscribe" id="sync" class="scroll button learn-more orange-btn">Telusuri</a>
 				</center>
 			</div>
