DESIGN: Add favicon

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,8 +27,8 @@ Note: Please use our back link in your site (webthemez.com)
 
 <link rel="stylesheet" type="text/css" href="<%= site.static_host %>/stylesheets/css.css"> 
 <link rel="stylesheet" type="text/css" href="<%= site.static_host %>/stylesheets/bootstrap.min.css"> 
-<!-- <link href="http://subditor.herokuapp.com/favicon.ico" type="image/x-icon" rel="icon">
-<link href="http://subditor.herokuapp.com/favicon.ico" type="image/x-icon" rel="shortcut icon"> -->
+<link href="<%= site.static_host %>/favicon.ico?v=1" type="image/x-icon" rel="icon">
+<link href="<%= site.static_host %>/favicon.ico?v=1" type="image/x-icon" rel="shortcut icon">
 <link rel="stylesheet" type="text/css" href="<%= site.static_host %>/stylesheets/home_styles.css">
 <!--<script src="<%= site.static_host %>/javascripts/analytics.js" async=""></script>-->
 <script async type="text/javascript" src="<%= site.static_host %>/javascripts/jquery-1.js"></script>
