--- a/views/partials/layout_header.ejs
+++ b/views/partials/layout_header.ejs
@@ -13,6 +13,8 @@
     <% if(canonical) { %>
         <meta name="canonical" href="<%= canonical %>">
     <% } %>
+<link href="<%= site.static_host %>/favicon.ico?v=1" type="image/x-icon" rel="icon">
+<link href="<%= site.static_host %>/favicon.ico?v=1" type="image/x-icon" rel="shortcut icon">
 
 <meta name="google-site-verification" content="n4fm6V7dOSJG2k3nRqTxFAVZLyVbT0zLAY3DqQzSBfc" />	
     <!-- Bootstrap Core CSS -->
