DESIGN: Preload thumbnail backstretch

--- a/public/stylesheets/home_styles.css
+++ b/public/stylesheets/home_styles.css
@@ -19,9 +19,15 @@ body {
 	background-size:cover;
 }
 body {
-    background-image:url('../images/peaceful-place-thumb.jpg');
-    background-repeat:no-repeat;
-    background-size:cover;
+    background: url('../images/peaceful-place-thumb.jpg') no-repeat center center fixed; 
+    -webkit-background-size: 100%; 
+    -moz-background-size: 100%; 
+    -o-background-size: 100%; 
+    background-size: 100%; 
+    -webkit-background-size: cover; 
+    -moz-background-size: cover; 
+    -o-background-size: cover; 
+    background-size: cover; 
 }
 .ie body {
 	filter: dropshadow(color=#000000, offx=0, offy=1);	
