DESIGN: Update homepage look and feel

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -139,7 +139,7 @@ Note: Please use our back link in your site (webthemez.com)
 <div id="overlay"></div>
 -->
 	<script async type="text/javascript" src="<%= site.static_host %>/javascripts/jquery-1.js"></script>
-	<footer class="blacken">Created by <a href="/" target="_blank"><%= site.title; %></a> Background by <a href="http://www.landscapehdwalls.com" target="_blank" rel="nofollow">landscapehdwalls</a></footer>
+	<footer class="blacken">Created by <a href="/" target="_blank"><%= site.title; %></a> Background by <a href="https://pixabay.com" target="_blank" rel="nofollow">pixabay</a></footer>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
